# src/app/services/swagger/model/models.ts
@@ -10,6 +10,8 @@ export * from './chatHistory';
 export * from './chatMessage';
 export * from './colonization';
 export * from './construction';
+export * from './eCalculationType';
+export * from './eDepositType';
 export * from './eEducationType';
 export * from './eFleetSizeType';
 export * from './eHullType';
@@ -25,8 +27,10 @@ export * from './fleetMerge';
 export * from './fleetMove';
 export * from './fleetOrbit';
 export * from './frontendError';
+export * from './hasIcon';
+export * from './hasTypeName';
 export * from './hull';
-export * from './isIcon';
+export * from './humanResourceAmount';
 export * from './jWT';
 export * from './job';
 export * from './miningFactors';
@@ -34,10 +38,12 @@ export * from './move';
 export * from './orbit';
 export * from './passiveModule';
 export * from './planet';
+export * from './plannedConstruction';
 export * from './propulsion';
 export * from './research';
 export * from './researchLevel';
 export * from './resourceAmount';
+export * from './resourceDeposit';
 export * from './shipClass';
 export * from './shipyardConstructionOrder';
 export * from './shipyardConstructionSelection';
