# src/app/services/swagger/model/resourceDeposit.ts
@@ -1,0 +1,26 @@
+/**
+ * BoF REST API
+ * description
+ *
+ * OpenAPI spec version: 0.0.1
+ * Contact: bla@bla.com
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+import { EDepositType } from './eDepositType';
+import { HumanResourceAmount } from './humanResourceAmount';
+import { ResourceAmount } from './resourceAmount';
+
+export interface ResourceDeposit { 
+    /**
+     * The amount of human resources by their type.
+     */
+    humanResources: Array<HumanResourceAmount>;
+    /**
+     * The amount of resources by their type.
+     */
+    resources: Array<ResourceAmount>;
+    subType: EDepositType;
+}
